Introduce media source and media tree API
Add an API to manage "services discovery" out of the playlist.

A "media source provider", associated to the libvlc instance, allows to
retrieve media sources (each associated to a services discovery module).

Requesting a services discovery that is not open will automatically open
it. If several "clients" request the same media source (i.e. by
requesting the same name), they will receive the same (refcounted) media
source instance.

As soon as a media source is released by all its clients, the associated
services discovery is closed.

Each media source holds a media tree, independant of the playlist, used
to store the input items detected by the services discovery. Clients may
listen to the tree to be notified of changes.

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -63,10 +63,12 @@ pluginsinclude_HEADERS = \
 	../include/vlc_keystore.h \
 	../include/vlc_list.h \
 	../include/vlc_md5.h \
+	../include/vlc_media_source.h \
 	../include/vlc_messages.h \
 	../include/vlc_meta.h \
 	../include/vlc_meta_fetcher.h \
 	../include/vlc_media_library.h \
+	../include/vlc_media_tree.h \
 	../include/vlc_memstream.h \
 	../include/vlc_mime.h \
 	../include/vlc_modules.h \
@@ -204,6 +206,10 @@ libvlccore_la_SOURCES = \
 	config/getopt.c \
 	config/vlc_getopt.h \
 	extras/libc.c \
+	media_source/media_source.c \
+	media_source/media_source.h \
+	media_tree/media_tree.c \
+	media_tree/media_tree.h \
 	modules/modules.h \
 	modules/modules.c \
 	modules/bank.c \
