--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -222,6 +222,8 @@ libvlccore_la_SOURCES = \
 	playlist/loadsave.c \
 	playlist/tree.c \
 	playlist/item.c \
+	playlist/randomizer.c \
+	playlist/randomizer.h \
 	playlist/search.c \
 	playlist/services_discovery.c \
 	playlist/renderer.c \
@@ -526,7 +528,8 @@ check_PROGRAMS = \
 	test_xmlent \
 	test_headers \
 	test_mrl_helpers \
-	test_arrays
+	test_arrays \
+	test_randomizer
 
 TESTS = $(check_PROGRAMS) check_symbols
 
@@ -549,6 +552,8 @@ test_xmlent_SOURCES = test/xmlent.c
 test_headers_SOURCES = test/headers.c
 test_mrl_helpers_SOURCES = test/mrl_helpers.c
 test_arrays_SOURCES = test/arrays.c
+test_randomizer_SOURCES = playlist/randomizer.c
+test_randomizer_CFLAGS = -DTEST
 
 AM_LDFLAGS = -no-install
 LDADD = libvlccore.la \
