--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -78,6 +78,7 @@ pluginsinclude_HEADERS = \
 	../include/vlc_picture_pool.h \
 	../include/vlc_player.h \
 	../include/vlc_playlist.h \
+	../include/vlc_playlist_new.h \
 	../include/vlc_plugin.h \
 	../include/vlc_probe.h \
 	../include/vlc_rand.h \
@@ -223,6 +224,7 @@ libvlccore_la_SOURCES = \
 	playlist/loadsave.c \
 	playlist/tree.c \
 	playlist/item.c \
+	playlist/playlist.c \
 	playlist/search.c \
 	playlist/services_discovery.c \
 	playlist/renderer.c \
@@ -536,7 +538,8 @@ check_PROGRAMS = \
 	test_mrl_helpers \
 	test_arrays \
 	test_vector \
-	test_shared_data_ptr
+	test_shared_data_ptr \
+	test_playlist
 
 TESTS = $(check_PROGRAMS) check_symbols
 
@@ -561,6 +564,8 @@ test_mrl_helpers_SOURCES = test/mrl_helpers.c
 test_arrays_SOURCES = test/arrays.c
 test_vector_SOURCES = test/vector.c
 test_shared_data_ptr_SOURCES = test/shared_data_ptr.cpp
+test_playlist_SOURCES = playlist/playlist.c
+test_playlist_CFLAGS = -DTEST_PLAYLIST
 
 AM_LDFLAGS = -no-install
 LDADD = libvlccore.la \
