qt: Plug in the new mediacenter interface

--- a/modules/gui/qt/Makefile.am
+++ b/modules/gui/qt/Makefile.am
@@ -98,6 +98,8 @@ libqt_plugin_la_SOURCES = \
 	gui/qt/components/controller_widget.hpp \
 	gui/qt/components/custom_menus.cpp \
 	gui/qt/components/custom_menus.hpp \
+	gui/qt/components/video_overlay.cpp \
+	gui/qt/components/video_overlay.hpp \
 	gui/qt/components/epg/EPGChannels.cpp \
 	gui/qt/components/epg/EPGChannels.hpp \
 	gui/qt/components/epg/EPGItem.cpp \
@@ -246,6 +248,7 @@ nodist_libqt_plugin_la_SOURCES = \
 	gui/qt/components/controller.moc.cpp \
 	gui/qt/components/controller_widget.moc.cpp \
 	gui/qt/components/custom_menus.moc.cpp \
+	gui/qt/components/video_overlay.moc.cpp \
 	gui/qt/components/epg/EPGChannels.moc.cpp \
 	gui/qt/components/epg/EPGProgram.moc.cpp \
 	gui/qt/components/epg/EPGRuler.moc.cpp \
@@ -495,6 +498,8 @@ libqt_plugin_la_RES = \
 	gui/qt/pixmaps/valid.svg \
 	gui/qt/pixmaps/search_clear.svg \
 	gui/qt/pixmaps/lock.svg \
+	gui/qt/qml/MainInterface.qml \
+	gui/qt/qml/BannerSources.qml \
 	gui/qt/qml/utils/ToolTipArea.qml \
 	gui/qt/qml/utils/GridItem.qml \
 	gui/qt/qml/utils/ListItem.qml \
