qml: provide ExpandGridView
  ExpandGridView mimics the behavior of a QML Grid view except it allows to display
  an Item below the currently selected item.

  +-----------------+
  | [ ] [ ] [X] [ ] | <- [X] selected item of the grid
  | --------------- |
  |                 | <- item details here
  | --------------- |
  | [ ] [ ] [ ] [ ] | <- next items of the grid
  +-----------------+

  The implementation is made by using two GridView and handling position and content
  position according to the global position of the view.

  The main drawback is that the model/delegate to be rendered in the grid has to be
  passed twice has ModelDelegate can't be shared between two gridview

--- a/modules/gui/qt/Makefile.am
+++ b/modules/gui/qt/Makefile.am
@@ -501,6 +501,7 @@ libqt_plugin_la_RES = \
 	gui/qt/qml/MainInterface.qml \
 	gui/qt/qml/BannerSources.qml \
 	gui/qt/qml/utils/ToolTipArea.qml \
+	gui/qt/qml/utils/ExpandGridView.qml \
 	gui/qt/qml/utils/GridItem.qml \
 	gui/qt/qml/utils/ListItem.qml \
 	gui/qt/qml/utils/MultiCoverPreview.qml \
