--- a/modules/gui/qt/Makefile.am
+++ b/modules/gui/qt/Makefile.am
@@ -120,6 +120,7 @@ libqt_plugin_la_SOURCES = \
 	gui/qt/components/playlist/selector.cpp \
 	gui/qt/components/playlist/selector.hpp \
 	gui/qt/components/playlist/sorting.h \
+	gui/qt/components/playlist_new/media.hpp \
 	gui/qt/components/playlist_new/playlist.cpp \
 	gui/qt/components/playlist_new/playlist.hpp \
 	gui/qt/components/playlist_new/playlist.moc.cpp \
