qt: provide helper class to expose vlc_var with the VLC_VAR_HASCHOICE flags as QAbstractListModel
  value can be selected by setting the CheckStateRole to true on an entry

--- a/modules/gui/qt/Makefile.am
+++ b/modules/gui/qt/Makefile.am
@@ -185,6 +185,8 @@ libqt_plugin_la_SOURCES = \
 	gui/qt/util/qvlcframe.hpp \
 	gui/qt/util/qvlcapp.hpp \
 	gui/qt/util/singleton.hpp \
+	gui/qt/util/vlc_var_choice_model.cpp \
+	gui/qt/util/vlc_var_choice_model.hpp \
 	gui/qt/util/vlc_var_observer.cpp \
 	gui/qt/util/vlc_var_observer.hpp \
 	gui/qt/util/imagehelper.cpp gui/qt/util/imagehelper.hpp \
@@ -288,6 +290,7 @@ nodist_libqt_plugin_la_SOURCES = \
 	gui/qt/util/qmenuview.moc.cpp \
 	gui/qt/util/qvlcapp.moc.cpp \
 	gui/qt/util/pictureflow.moc.cpp \
+	gui/qt/util/vlc_var_choice_model.moc.cpp \
 	gui/qt/util/vlc_var_observer.moc.cpp \
 	gui/qt/util/validators.moc.cpp \
 	gui/qt/util/buttons/RoundButton.moc.cpp \
